Restore index.html to original structure
Restored the index.html file to its original state with proper HTML structure and content.

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,11 @@
                             <span class="tag">Kiro</span>
                             <span class="tag">Javascript</span>
                         </div>
-                        <p>A full-featured workout platform with user authentication, courses enrollment, track workout with CRUD,fast workout setup for beginner and advanced, AI chat, week and month analysis. By using green as it psychologically represents growth, health, and success—perfect for tracking fitness progress and motivating users toward their goals.</p>
+                        <p>A full-featured workout platform with user authentication, courses enrollment, 
+                            track workout with CRUD,fast workout setup for beginner and advanced, AI chat, 
+                            week and month analysis. By using green as it psychologically represents growth, health, 
+                            and success—perfect for tracking fitness progress and motivating users toward their goals.
+                        Test account: test123456 password: 123456</p>
                         <a href="https://alanluk-workout.onrender.com" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                     </div>
                 </div>
@@ -131,4 +135,5 @@
 
     <script src="/script.js"></script>
 </body>
+
 </html>
