--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,15 @@
         </div>
     </section>
 
-    <!-- Project1 Section -->
+    <!-- About Section (Missing from your code - added for completeness) -->
+    <section class="about" id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <p>Add your about information here...</p>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
     <section class="projects" id="projects">
         <div class="container">
             <h2>My Projects</h2>
@@ -46,7 +54,6 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <!-- ✅ FIXED: Removed double img src -->
                         <img src="/assets/images/workout.png" alt="Workout App Screenshot">
                     </div>
                     <div class="project-info">
@@ -62,22 +69,17 @@
                             <span class="tag">Javascript</span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
-                            track workout with CRUD,fast workout setup for beginner and advanced, AI chat, 
+                            track workout with CRUD, fast workout setup for beginner and advanced, AI chat, 
                             week and month analysis. By using green as it psychologically represents growth, health, 
                             and success—perfect for tracking fitness progress and motivating users toward their goals.
-                        Test account: test123456 password: 123456</p>
+                            Test account: test123456 password: 123456</p>
                         <a href="https://alanluk-workout.onrender.com" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                     </div>
                 </div>
 
-            <!-- Project2 Section -->
-    <section class="projects" id="projects">
-        <div class="container">
-            <div class="project-grid">
-                <!-- Project 1 -->
+                <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <!-- ✅ FIXED: Removed double img src -->
                         <img src="/assets/images/workout.png" alt="Workout App Screenshot">
                     </div>
                     <div class="project-info">
@@ -93,17 +95,18 @@
                             <span class="tag">Javascript</span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
-                            track workout with CRUD,fast workout setup for beginner and advanced, AI chat, 
+                            track workout with CRUD, fast workout setup for beginner and advanced, AI chat, 
                             week and month analysis. By using green as it psychologically represents growth, health, 
                             and success—perfect for tracking fitness progress and motivating users toward their goals.
-                        Test account: test123456 password: 123456</p>
+                            Test account: test123456 password: 123456</p>
                         <a href="https://alanluk-workoutappwithadaim.onrender.com" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                     </div>
                 </div>
                 <!-- Add more project cards here as needed -->
-                
+            </div>
+        </div>
+    </section>
 
-    
     <!-- Links Section -->
     <section id="links">
         <div class="container">
@@ -156,7 +159,4 @@
 
     <script src="/script.js"></script>
 </body>
-
 </html>
-
-
