--- a/public/index.html
+++ b/public/index.html
@@ -59,11 +59,12 @@
                             <span class="tag">Javascript</span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
-                            track workout with CRUD, fast workout setup for beginner and advanced, AI chat, 
-                            week and month analysis. By using green as it psychologically represents growth, health, 
+                            track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
+                            week and month analysis, weekly promotions. By using green as it psychologically represents growth, health, 
                             and success—perfect for tracking fitness progress and motivating users toward their goals.
-                            Test account: test123456 password: 123456</p>
-                        <a href="https://alanluk-workout.onrender.com" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
+                            Test account: test123456 password: 123456. There is an admin account for the admin to manage the courses, coaches, users. 
+                            Such as upload the new courses,  new coaches, change user password. As for the admin account, you can contact me to get it.</p>
+                        <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                     </div>
                 </div>
 
@@ -124,4 +125,5 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
