--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,12 @@
                                 <div class="carousel-slide">
                                     <img src="/assets/images/workout3.png" alt="Workout App Screenshot 3" class="carousel-image">
                                 </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/workout4.png" alt="Workout App Screenshot 4" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/workout5.png" alt="Workout App Screenshot 5" class="carousel-image">
+                                </div>
                             </div>
                             <button class="carousel-prev">&#10094;</button>
                             <button class="carousel-next">&#10095;</button>
