--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,6 @@
                                 <div class="carousel-slide active">
                                     <img src="/assets/images/workout.png" alt="Workout App Screenshot 1" class="carousel-image">
                                 </div>
-                                <!-- Add more slides if you have multiple images -->
                                 <div class="carousel-slide">
                                     <img src="/assets/images/workout2.png" alt="Workout App Screenshot 2" class="carousel-image">
                                 </div>
@@ -68,6 +67,8 @@
                             <button class="carousel-next">&#10095;</button>
                             <div class="carousel-dots">
                                 <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
                                 <span class="dot"></span>
                                 <span class="dot"></span>
                             </div>
