--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Project1 Section -->
     <section class="projects" id="projects">
         <div class="container">
             <h2>My Projects</h2>
@@ -79,7 +79,7 @@
                     </div>
                     
                     <div class="project-info">
-                        <h3>Workout with courses enrollment</h3>
+                        <h3>Workout app with courses enrollment, admin system</h3>
                         <div class="project-tags">
                             <span class="tag">Cloud</span>
                             <span class="tag">Node.js</span>
@@ -97,6 +97,47 @@
                             Test account: test123456 password: 123456. There is an admin account for the admin to manage the courses, coaches, users. 
                             Such as upload the new courses,  new coaches, change user password. As for the admin account, you can contact me to get it.</p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <!-- Carousel Container -->
+                    <div class="project-img-carousel">
+                        <div class="carousel-container">
+                            <div class="carousel-slides">
+                                <div class="carousel-slide active">
+                                    <img src="/assets/images/Attack1.png" alt="Attack App Screenshot 1" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack2.png" alt="Attack App Screenshot 2" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack3.png" alt="Attack App Screenshot 3" class="carousel-image">
+                                </div>
+                            </div>
+                            <button class="carousel-prev">&#10094;</button>
+                            <button class="carousel-next">&#10095;</button>
+                            <div class="carousel-dots">
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <button class="zoom-btn" title="Zoom Image">
+                            <i class="fas fa-search-plus"></i>
+                        </button>
+                    </div>
+                    
+                    <div class="project-info">
+                        <h3>Simple .apk attack</h3>
+                        <div class="project-tags">
+                            <span class="tag">VMware</span>
+                            <span class="tag">Kali</span>
+                            <span class="tag">MSF</span>
+                        </div>
+                        <p>A simple penetration(.apk) created by msfvenom, in VMWare. It helps me developed a basic concept about the cyber security, how the hacker hack a phone or pc, and help to protect the data.</p>
+                        <a href="https://github.com/alanluk2226/Simple-attack" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
                     </div>
                 </div>
 
