--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,34 @@
         </div>
     </section>
 
+    <!-- Other Projects Experience Section -->
+    <section class="other-projects">
+        <div class="container">
+            <h2>Other Projects Experience</h2>
+            <div class="project-grid">
+                <!-- AI Phishing Detection Project -->
+                <div class="project-card">
+                    <div class="project-info">
+                        <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
+                        <div class="project-tags">
+                            <span class="tag">AI/ML</span>
+                            <span class="tag">Email Security</span>
+                            <span class="tag">Phishing Detection</span>
+                            <span class="tag">Risk Assessment</span>
+                            <span class="tag">Proposal</span>
+                        </div>
+                        <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
+                        <div class="project-status">
+                            <span class="status-badge">Proposal Stage</span>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Add more other project cards here as needed -->
+            </div>
+        </div>
+    </section>
+
     <!-- Links Section -->
     <section id="links">
         <div class="container">
