--- a/public/index.html
+++ b/public/index.html
@@ -163,7 +163,7 @@
                             <span class="tag">Proposal</span>
                         </div>
                         <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
-                        <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">
+                        <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project_Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">
                             <i class="fas fa-file-pdf" style="margin-right: 5px;"></i>View Proposal (PDF)
                         </a>
                         <div class="project-status">
@@ -243,4 +243,5 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
