--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>Alan Luk | Portfolio</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- PDF.js Library -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -182,6 +184,10 @@
                             <span class="tag">Risk Assessment</span>
                             <span class="tag">Proposal</span>
                             <!-- Logo Labels -->
+                            <span class="logo-tag hkstp">
+                                <img src="/assets/logos/hkstp-logo.svg" alt="HKSTP Logo">
+                                HKSTP
+                            </span>
                             <span class="logo-tag nvidia">
                                 <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
                                     <path d="M12.5 2.5c-5.5 0-10 4.5-10 10s4.5 10 10 10 10-4.5 10-10-4.5-10-10-10zm4.5 14.5h-2v-5h-2v5h-2v-7h6v7z"/>
@@ -279,22 +285,39 @@
             <div class="pdf-modal-header">
                 <h3 id="pdfModalTitle">Document Preview</h3>
                 <div class="pdf-modal-controls">
+                    <button id="pdfPrevPage" class="pdf-control-btn" title="Previous Page">
+                        <i class="fas fa-chevron-left"></i>
+                    </button>
+                    <span id="pdfPageInfo">1 / 1</span>
+                    <button id="pdfNextPage" class="pdf-control-btn" title="Next Page">
+                        <i class="fas fa-chevron-right"></i>
+                    </button>
+                    <button id="pdfZoomOut" class="pdf-control-btn" title="Zoom Out">
+                        <i class="fas fa-search-minus"></i>
+                    </button>
+                    <span id="pdfZoomLevel">100%</span>
+                    <button id="pdfZoomIn" class="pdf-control-btn" title="Zoom In">
+                        <i class="fas fa-search-plus"></i>
+                    </button>
                     <button id="pdfFullscreen" class="pdf-control-btn" title="Open in new tab">
                         <i class="fas fa-external-link-alt"></i>
                     </button>
                 </div>
             </div>
             <div class="pdf-viewer-container">
-                <iframe id="pdfViewer" src="" frameborder="0"></iframe>
+                <div id="pdfCanvasContainer" class="pdf-canvas-container">
+                    <canvas id="pdfCanvas"></canvas>
+                </div>
                 <div class="pdf-loading" id="pdfLoading">
                     <i class="fas fa-spinner fa-spin"></i>
                     <p>Loading PDF...</p>
                 </div>
                 <div class="pdf-error" id="pdfError" style="display: none;">
                     <i class="fas fa-exclamation-triangle"></i>
-                    <p>Unable to load PDF preview</p>
-                    <button class="btn" onclick="window.open(document.getElementById('pdfViewer').src, '_blank')">
-                        Open in New Tab
+                    <p>Unable to load PDF</p>
+                    <p style="font-size: 0.9rem; margin-top: 5px;">Click below to open the PDF in a new tab</p>
+                    <button class="btn" onclick="window.open('/assets/documents/Luk_Ho_Lung_NVIDIA_Project_Proposal.pdf', '_blank')" style="margin-top: 10px;">
+                        <i class="fas fa-external-link-alt" style="margin-right: 5px;"></i>Open PDF
                     </button>
                 </div>
             </div>
