--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
                 <ul class="nav-links" id="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#other-projects">Other Projects</a></li>
                     <li><a href="#links">Links</a></li>
                 </ul>
             </nav>
@@ -89,19 +90,6 @@
                             <span class="tag">JSON</span>
                             <span class="tag">Kiro</span>
                             <span class="tag">Javascript</span>
-                            <!-- Logo Labels -->
-                            <span class="logo-tag nodejs">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M12 1.85c-.27 0-.55.07-.78.2l-7.44 4.3c-.48.28-.78.8-.78 1.36v8.58c0 .56.3 1.08.78 1.36l7.44 4.3c.46.26 1.04.26 1.5 0l7.44-4.3c.48-.28.78-.8.78-1.36V7.71c0-.56-.3-1.08-.78-1.36l-7.44-4.3c-.23-.13-.51-.2-.78-.2z"/>
-                                </svg>
-                                Node.js
-                            </span>
-                            <span class="logo-tag mongodb">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M17.193 9.555c-1.264-5.58-4.252-7.414-4.573-8.115-.28-.394-.53-.954-.735-1.44-.036.495-.055.685-.523 1.184-.723.566-4.438 3.682-4.74 10.02-.282 5.912 4.27 9.435 4.888 9.884l.07.05A73.49 73.49 0 0111.91 24h.481c.114-1.032.284-2.056.51-3.07.417-.296.604-.463.85-.693a11.342 11.342 0 003.639-8.464c.01-.814-.103-1.662-.197-2.218z"/>
-                                </svg>
-                                MongoDB
-                            </span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
                             track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
@@ -148,13 +136,6 @@
                             <span class="tag">VMware</span>
                             <span class="tag">Kali</span>
                             <span class="tag">MSF</span>
-                            <!-- Logo Labels -->
-                            <span class="logo-tag github">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                                </svg>
-                                GitHub
-                            </span>
                         </div>
                         <p>A simple penetration(.apk) created by msfvenom, in VMWare. It helps me developed a basic concept about the cyber security, how the hacker hack a phone or pc, and help to protect the data.</p>
                         <a href="https://github.com/alanluk2226/Simple-attack" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
@@ -167,43 +148,60 @@
     </section>
 
     <!-- Other Projects Experience Section -->
-    <section class="other-projects">
+    <section class="other-projects" id="other-projects">
         <div class="container">
             <h2>Other Projects Experience</h2>
             <div class="project-grid">
                 <!-- AI Phishing Detection Project -->
                 <div class="project-card">
+                    <!-- Carousel Container -->
+                    <div class="project-img-carousel">
+                        <div class="carousel-container">
+                            <div class="carousel-slides">
+                                <div class="carousel-slide active">
+                                    <img src="/assets/images/Project.png" alt="AI Phishing Detection Overview" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack1.png" alt="Phishing Attack Analysis 1" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack2.png" alt="Phishing Attack Analysis 2" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack3.png" alt="Phishing Attack Analysis 3" class="carousel-image">
+                                </div>
+                            </div>
+                            <button class="carousel-prev">&#10094;</button>
+                            <button class="carousel-next">&#10095;</button>
+                            <div class="carousel-dots">
+                                <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                            </div>
+                        </div>
+                        <button class="zoom-btn" title="Zoom Image">
+                            <i class="fas fa-search-plus"></i>
+                        </button>
+                    </div>
+                    
                     <div class="project-info">
                         <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
                         <div class="project-tags">
                             <span class="tag">AI/ML</span>
+                            <span class="tag">Cybersecurity</span>
                             <span class="tag">Email Security</span>
-                            <span class="tag">Phishing Detection</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">NLP</span>
                             <span class="tag">Risk Assessment</span>
-                            <span class="tag">Proposal</span>
-                            <!-- Logo Labels -->
-                            <span class="logo-tag hkstp">
-                                <img src="/assets/logos/hkstp-logo.svg" alt="HKSTP Logo">
-                                HKSTP
-                            </span>
-                            <span class="logo-tag nvidia">
-                                <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                                    <path d="M12.5 2.5c-5.5 0-10 4.5-10 10s4.5 10 10 10 10-4.5 10-10-4.5-10-10-10zm4.5 14.5h-2v-5h-2v5h-2v-7h6v7z"/>
-                                </svg>
-                                NVIDIA
-                            </span>
+                            <span class="tag">NVIDIA</span>
                         </div>
                         <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
-                        <a href="/proposal" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">
-                            <i class="fas fa-file-pdf" style="margin-right: 5px;"></i>View Proposal (PDF)
-                        </a>
-                        <div class="project-status">
-                            <span class="status-badge">Proposal Stage</span>
-                        </div>
+                        <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Proposal (PDF)</a>
                     </div>
                 </div>
 
-                <!-- Add more other project cards here as needed -->
+                <!-- Add more project cards here as needed -->
             </div>
         </div>
     </section>
@@ -248,6 +246,7 @@
                 <ul class="footer-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#projects">Projects</a></li>
+                    <li><a href="#other-projects">Other Projects</a></li>
                     <li><a href="#links">Links</a></li>
                 </ul>
                 <div class="copyright">
