--- a/public/index.html
+++ b/public/index.html
@@ -185,20 +185,22 @@
                         </button>
                     </div>
                     
-                    <div class="project-info">
-                        <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
-                        <div class="project-tags">
-                            <span class="tag">AI/ML</span>
-                            <span class="tag">Cybersecurity</span>
-                            <span class="tag">Email Security</span>
-                            <span class="tag">Python</span>
-                            <span class="tag">NLP</span>
-                            <span class="tag">Risk Assessment</span>
-                            <span class="tag">NVIDIA</span>
+                    <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project Proposal.pdf" target="_blank" class="project-info-link">
+                        <div class="project-info">
+                            <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
+                            <div class="project-tags">
+                                <span class="tag">AI/ML</span>
+                                <span class="tag">Cybersecurity</span>
+                                <span class="tag">Email Security</span>
+                                <span class="tag">Python</span>
+                                <span class="tag">NLP</span>
+                                <span class="tag">Risk Assessment</span>
+                                <span class="tag">NVIDIA</span>
+                            </div>
+                            <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
+                            <span class="btn" style="margin-top: 10px; display: inline-block;">View Proposal (PDF)</span>
                         </div>
-                        <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
-                        <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Proposal (PDF)</a>
-                    </div>
+                    </a>
                 </div>
 
                 <!-- Add more project cards here as needed -->
