--- a/public/index.html
+++ b/public/index.html
@@ -161,6 +161,15 @@
                                 <div class="carousel-slide active">
                                     <img src="/assets/images/Project.png" alt="AI Phishing Detection Overview" class="carousel-image">
                                 </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack1.png" alt="Phishing Attack Analysis 1" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack2.png" alt="Phishing Attack Analysis 2" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Attack3.png" alt="Phishing Attack Analysis 3" class="carousel-image">
+                                </div>
                             </div>
                             <button class="carousel-prev">&#10094;</button>
                             <button class="carousel-next">&#10095;</button>
@@ -176,7 +185,7 @@
                         </button>
                     </div>
                     
-                    <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project Proposal.pdf" target="_blank" class="project-info-link">
+                    <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project%20Proposal.pdf" target="_blank" class="project-info-link">
                         <div class="project-info">
                             <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
                             <div class="project-tags">
