--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
                         </button>
                     </div>
                     
-                    <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project%20Proposal.pdf" target="_blank" class="project-info-link">
+                    <a href="/assets/documents/Luk_Ho_Lung_NVIDIA_Project_Proposal.pdf" target="_blank" class="project-info-link">
                         <div class="project-info">
                             <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
                             <div class="project-tags">
@@ -275,4 +275,5 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
