--- a/public/index.html
+++ b/public/index.html
@@ -154,18 +154,10 @@
             <div class="project-grid">
                 <!-- AI Phishing Detection Project -->
                 <div class="project-card">
-                    <!-- Carousel Container -->
+                    <!-- Single Image Container -->
                     <div class="project-img-carousel">
-                        <div class="carousel-container">
-                            <div class="carousel-slides">
-                                <div class="carousel-slide active">
-                                    <img src="/assets/images/Project.png" alt="AI Phishing Detection Overview" class="carousel-image">
-                            </div>
-                            <button class="carousel-prev">&#10094;</button>
-                            <button class="carousel-next">&#10095;</button>
-                            <div class="carousel-dots">
-                                <span class="dot active"></span>
-                            </div>
+                        <div class="single-image-container">
+                            <img src="/assets/images/Project.png" alt="AI Phishing Detection Overview" class="project-image">
                         </div>
                         <button class="zoom-btn" title="Zoom Image">
                             <i class="fas fa-search-plus"></i>
@@ -262,6 +254,5 @@
     <script src="/script.js"></script>
 </body>
 </html>
-
 
 
