--- a/public/index.html
+++ b/public/index.html
@@ -82,15 +82,15 @@
                     <div class="project-info">
                         <h3>Workout app with courses enrollment, admin system</h3>
                         <div class="project-tags">
-                            <span class="tag"><i class="fas fa-cloud"></i> Cloud</span>
-                            <span class="tag"><i class="fab fa-node-js"></i> Node.js</span>
-                            <span class="tag"><i class="fas fa-server"></i> Render</span>
-                            <span class="tag"><i class="fas fa-database"></i> MongoDB</span>
-                            <span class="tag"><i class="fas fa-code"></i> EJS</span>
-                            <span class="tag"><i class="fas fa-file-code"></i> JSON</span>
-                            <span class="tag"><i class="fas fa-robot"></i> Kiro</span>
-                            <span class="tag"><i class="fab fa-js-square"></i> Javascript</span>
-                            <span class="tag"><i class="fab fa-github"></i> GitHub</span>
+                            <span class="tag">Cloud</span>
+                            <span class="tag">Node.js</span>
+                            <span class="tag">Render</span>
+                            <span class="tag">MongoDB</span>
+                            <span class="tag">EJS</span>
+                            <span class="tag">JSON</span>
+                            <span class="tag">Kiro</span>
+                            <span class="tag">Javascript</span>
+                            <span class="tag">GitHub</span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
                             track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
@@ -134,10 +134,10 @@
                     <div class="project-info">
                         <h3>Simple .apk attack</h3>
                         <div class="project-tags">
-                            <span class="tag"><i class="fas fa-desktop"></i> VMware</span>
-                            <span class="tag"><i class="fab fa-linux"></i> Kali</span>
-                            <span class="tag"><i class="fas fa-shield-alt"></i> MSF</span>
-                            <span class="tag"><i class="fab fa-github"></i> GitHub</span>
+                            <span class="tag">VMware</span>
+                            <span class="tag">Kali</span>
+                            <span class="tag">MSF</span>
+                            <span class="tag">GitHub</span>
                         </div>
                         <p>A simple penetration(.apk) created by msfvenom, in VMWare. It helps me developed a basic concept about the cyber security, how the hacker hack a phone or pc, and help to protect the data.</p>
                         <a href="https://github.com/alanluk2226/Simple-attack" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
@@ -169,15 +169,15 @@
                     <div class="project-info">
                         <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
                         <div class="project-tags">
-                            <span class="tag"><i class="fas fa-brain"></i> AI/ML</span>
-                            <span class="tag"><i class="fas fa-shield-alt"></i> Cybersecurity</span>
-                            <span class="tag"><i class="fas fa-envelope-open-text"></i> Email Security</span>
-                            <span class="tag"><i class="fab fa-python"></i> Python</span>
-                            <span class="tag"><i class="fas fa-language"></i> NLP</span>
-                            <span class="tag"><i class="fas fa-exclamation-triangle"></i> Risk Assessment</span>
-                            <span class="tag"><i class="fas fa-microchip"></i> NVIDIA</span>
-                            <span class="tag"><i class="fas fa-building"></i> HKSTP</span>
-                            <span class="tag"><i class="fab fa-github"></i> GitHub</span>
+                            <span class="tag">AI/ML</span>
+                            <span class="tag">Cybersecurity</span>
+                            <span class="tag">Email Security</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">NLP</span>
+                            <span class="tag">Risk Assessment</span>
+                            <span class="tag">NVIDIA</span>
+                            <span class="tag">HKSTP</span>
+                            <span class="tag">GitHub</span>
                         </div>
                         <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
                         <a href="/assets/documents/Project_Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Proposal (PDF)</a>
