--- a/public/index.html
+++ b/public/index.html
@@ -169,17 +169,20 @@
                     <div class="project-info">
                         <h3>AI-Driven Phishing Detection and Mitigation Assistant</h3>
                         <div class="project-tags">
+                            <span class="tag">NVIDIA</span>
+                            <span class="tag">HKSTP</span>
                             <span class="tag">AI/ML</span>
-                            <span class="tag">Cybersecurity</span>
                             <span class="tag">Email Security</span>
                             <span class="tag">Python</span>
                             <span class="tag">NLP</span>
-                            <span class="tag">Risk Assessment</span>
-                            <span class="tag">NVIDIA</span>
-                            <span class="tag">HKSTP</span>
                             <span class="tag">GitHub</span>
                         </div>
-                        <p>A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation assistant that focuses on email as the primary attack vector. The system parses incoming emails into structured features and analyzes them to produce a phishing risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, or allow messages, providing automated protection against phishing attacks while minimizing false positives.</p>
+                        <p>This project proposal was developed during an NVIDIA workshop hosted by HKSTP. A comprehensive proposal for developing a prototype AI-driven phishing detection and mitigation 
+                            assistant that focuses on email as the primary attack vector. 
+                            The system parses incoming emails into structured features and analyzes them to produce a phishing 
+                            risk score. Based on this assessment, intelligent agents decide whether to flag, quarantine, 
+                            or allow messages, providing automated protection against phishing attacks while minimizing 
+                            false positives.</p>
                         <a href="/assets/documents/Project_Proposal.pdf" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Proposal (PDF)</a>
                     </div>
                 </div>
@@ -256,5 +259,6 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
