--- a/public/index.html
+++ b/public/index.html
@@ -95,9 +95,12 @@
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
                             track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
                             week and month analysis, weekly promotions. By using green as it psychologically represents growth, health, 
-                            and success—perfect for tracking fitness progress and motivating users toward their goals.
-                            Test account: test123456 password: 123456. There is an admin account for the admin to manage the courses, coaches, users. 
-                            Such as upload the new courses,  new coaches, change user password. As for the admin account, you can contact me to get it.</p>
+                            and success—perfect for tracking fitness progress and motivating users toward their goals. The project is using response design,
+                            viewing in mobiel phone is possible especially the course timeable.
+                            There is an admin account for the admin to manage the courses, coaches, users.<br>
+                            Test account: test123456 password: 123456
+                            Admin account: admin123456 password: 123456 (For security reason do not Remember me, else it will fali to login)
+                            </p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                     </div>
                 </div>
@@ -259,6 +262,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
