--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,8 @@
                             week and month analysis, weekly promotions. By using green as it psychologically represents growth, health, 
                             and success—perfect for tracking fitness progress and motivating users toward their goals. The project is using response design,
                             viewing in mobiel phone is possible especially the course timeable.
-                            There is an admin account for the admin to manage the courses, coaches, users.<br>
-                            Test account: test123456 password: 123456
+                            There is an admin account for the admin to manage the courses, coaches, users.<br><br>
+                            Test account: test123456 password: 123456<br>
                             Admin account: admin123456 password: 123456 (For security reason do not Remember me, else it will fali to login)
                             </p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
@@ -262,6 +262,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
