--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,46 @@
                                 <div class="carousel-slide">
                                     <img src="/assets/images/workout5.png" alt="Workout App Screenshot 5" class="carousel-image">
                                 </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/Mongodb1" alt="MongoDB Screenshot 1" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/mongodb2" alt="MongoDB Screenshot 2" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/mongodb3" alt="MongoDB Screenshot 3" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/mongodb4" alt="MongoDB Screenshot 4" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/API1" alt="API Screenshot 1" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/API2" alt="API Screenshot 2" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/API3" alt="API Screenshot 3" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/API4" alt="API Screenshot 4" class="carousel-image">
+                                </div>
+                                <div class="carousel-slide">
+                                    <img src="/assets/images/API5" alt="API Screenshot 5" class="carousel-image">
+                                </div>
                             </div>
                             <button class="carousel-prev">&#10094;</button>
                             <button class="carousel-next">&#10095;</button>
                             <div class="carousel-dots">
                                 <span class="dot active"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
+                                <span class="dot"></span>
                                 <span class="dot"></span>
                                 <span class="dot"></span>
                                 <span class="dot"></span>
@@ -82,15 +117,15 @@
                     <div class="project-info">
                         <h3>Workout app with courses enrollment, admin system</h3>
                         <div class="project-tags">
-                            <span class="tag">Cloud</span>
                             <span class="tag">Node.js</span>
+                            <span class="tag">Express.js</span>
                             <span class="tag">Render</span>
                             <span class="tag">MongoDB</span>
                             <span class="tag">EJS</span>
-                            <span class="tag">JSON</span>
-                            <span class="tag">Kiro</span>
                             <span class="tag">Javascript</span>
                             <span class="tag">GitHub</span>
+                            <span class="tag">CURL</span>
+                            <span class="tag">VM Linux os ubuntu</span>
                         </div>
                         <p>A full-featured workout platform with user authentication, courses enrollment, 
                             track workout with CRUD, fast workout setup for beginner and advanced, chat bot, 
@@ -119,7 +154,7 @@
                                 </div>
                                 <div class="carousel-slide">
                                     <img src="/assets/images/Attack3.png" alt="Attack App Screenshot 3" class="carousel-image">
-                                </div>
+                                </div>                             
                             </div>
                             <button class="carousel-prev">&#10094;</button>
                             <button class="carousel-next">&#10095;</button>
