--- a/public/index.html
+++ b/public/index.html
@@ -64,31 +64,31 @@
                                     <img src="/assets/images/workout5.png" alt="Workout App Screenshot 5" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/Mongodb1" alt="MongoDB Screenshot 1" class="carousel-image">
+                                    <img src="/assets/images/Mongodb1.png" alt="MongoDB Screenshot 1" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/mongodb2" alt="MongoDB Screenshot 2" class="carousel-image">
+                                    <img src="/assets/images/mongodb2.png" alt="MongoDB Screenshot 2" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/mongodb3" alt="MongoDB Screenshot 3" class="carousel-image">
+                                    <img src="/assets/images/mongodb3.png" alt="MongoDB Screenshot 3" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/mongodb4" alt="MongoDB Screenshot 4" class="carousel-image">
+                                    <img src="/assets/images/mongodb4.png" alt="MongoDB Screenshot 4" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/API1" alt="API Screenshot 1" class="carousel-image">
+                                    <img src="/assets/images/API1.png" alt="API Screenshot 1" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/API2" alt="API Screenshot 2" class="carousel-image">
+                                    <img src="/assets/images/API2.png" alt="API Screenshot 2" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/API3" alt="API Screenshot 3" class="carousel-image">
+                                    <img src="/assets/images/API3.png" alt="API Screenshot 3" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/API4" alt="API Screenshot 4" class="carousel-image">
+                                    <img src="/assets/images/API4.png" alt="API Screenshot 4" class="carousel-image">
                                 </div>
                                 <div class="carousel-slide">
-                                    <img src="/assets/images/API5" alt="API Screenshot 5" class="carousel-image">
+                                    <img src="/assets/images/API5.png" alt="API Screenshot 5" class="carousel-image">
                                 </div>
                             </div>
                             <button class="carousel-prev">&#10094;</button>
@@ -296,6 +296,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
