--- a/public/index.html
+++ b/public/index.html
@@ -137,6 +137,7 @@
                             Admin account: admin123456 password: 123456 (For security reason do not Remember me, else it will fali to login)
                             </p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
+                        <a href="https://github.com/alanluk2226/Workhard" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
                     </div>
                 </div>
 
@@ -296,6 +297,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
