--- a/public/index.html
+++ b/public/index.html
@@ -227,6 +227,57 @@
 
                 <!-- Add more project cards here as needed -->
             </div>
+
+            <h2 style="margin-top: 60px;">Certificates</h2>
+            <div class="project-grid">
+                <!-- NVIDIA Certificate 1 -->
+                <div class="project-card">
+                    <div class="project-img-carousel">
+                        <div class="single-image-container">
+                            <img src="/assets/images/Nvidia1.png" alt="NVIDIA Deep Learning Certificate" class="project-image">
+                        </div>
+                        <button class="zoom-btn" title="Zoom Image">
+                            <i class="fas fa-search-plus"></i>
+                        </button>
+                    </div>
+                    
+                    <div class="project-info">
+                        <h3>NVIDIA Deep Learning Certificate</h3>
+                        <div class="project-tags">
+                            <span class="tag">NVIDIA</span>
+                            <span class="tag">Deep Learning</span>
+                            <span class="tag">Python</span>
+                            <span class="tag">AI Training</span>
+                        </div>
+                        <p>The deep learning course focuses on how to train AI, which is a subset of machine learning. In this course, I was able to train the model to identify what animal is from a picture by using Python. It became an important foundation for my future AI training and provided hands-on experience with neural networks and model optimization.</p>
+                        <a href="https://learn.nvidia.com/certificates?id=vpB4tLPKTf6P5H6tpWq0Mw" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Certificate</a>
+                    </div>
+                </div>
+
+                <!-- NVIDIA Certificate 2 -->
+                <div class="project-card">
+                    <div class="project-img-carousel">
+                        <div class="single-image-container">
+                            <img src="/assets/images/Nvidia2.png" alt="NVIDIA Transformer Architecture Certificate" class="project-image">
+                        </div>
+                        <button class="zoom-btn" title="Zoom Image">
+                            <i class="fas fa-search-plus"></i>
+                        </button>
+                    </div>
+                    
+                    <div class="project-info">
+                        <h3>NVIDIA Transformer Architecture Certificate</h3>
+                        <div class="project-tags">
+                            <span class="tag">NVIDIA</span>
+                            <span class="tag">Transformers</span>
+                            <span class="tag">NLP</span>
+                            <span class="tag">Neural Networks</span>
+                        </div>
+                        <p>I learned the concept of NVIDIA's Transformer architecture. It can transfer the user's natural language into numeric tokens, and then convert them into vectors (matrices). These matrices are processed through multiple layers of neural networks using attention mechanisms to understand context, relationships, and meaning. Finally, the model generates a response by predicting the next most likely token in sequence. It gave me a huge concept about how AI works and will help my future work related to AI engineering, particularly in building AI models.</p>
+                        <a href="https://learn.nvidia.com/certificates?id=YjOGbXNIRNW_sCjce-pZMg" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View Certificate</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
