--- a/public/index.html
+++ b/public/index.html
@@ -133,8 +133,11 @@
                             and success—perfect for tracking fitness progress and motivating users toward their goals. The project is using response design,
                             viewing in mobiel phone is possible especially the course timeable.
                             There is an admin account for the admin to manage the courses, coaches, users.<br><br>
-                            Test account: test123456 password: 123456<br>
-                            Admin account: admin123456 password: 123456 (For security reason do not Remember me, else it will fali to login)
+                            Test account: <h4><b>>test123456</b</h4> password: <h4><b>123456</b</h4>
+                            <br>
+                            Admin account: <h4><b>admin123456</b</h4> password: <h4><b>123456</b</h4> 
+                            <br>
+                            <br>(For security reason do not Remember me, else it will fali to login)
                             </p>
                         <a href="https://workhard-b5zs.onrender.com/" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Render</a>
                         <a href="https://github.com/alanluk2226/Workhard" class="btn" target="_blank" style="margin-top: 10px; display: inline-block;">View on Github</a>
@@ -348,6 +351,7 @@
     <script src="/script.js"></script>
 </body>
 </html>
+
 
 
 
